RESOLVED FIXED173245
[Mac] Unaligned pointers in static CMBufferCallbacks structs defined in WebCoreDecompressionSession.mm
https://bugs.webkit.org/show_bug.cgi?id=173245
Summary [Mac] Unaligned pointers in static CMBufferCallbacks structs defined in WebCo...
mitz
Reported 2017-06-11 15:55:28 PDT
When building WebCore with the Xcode 9 public beta, the linker warns that pointers in the CMBufferCallbacks structs defined in WebCoreDecompressionSession are not 8-byte aligned.
Attachments
Align the structs (3.36 KB, patch)
2017-06-11 16:03 PDT, mitz
no flags
mitz
Comment 1 2017-06-11 16:03:28 PDT
Created attachment 312625 [details] Align the structs
mitz
Comment 2 2017-06-11 16:05:26 PDT
(In reply to mitz from comment #0) > Xcode 9 public beta Mean to say developer beta.
Build Bot
Comment 3 2017-06-11 16:05:41 PDT
Attachment 312625 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.mm:137: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.mm:158: More than one command on the same line [whitespace/newline] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 4 2017-06-11 16:27:22 PDT
Comment on attachment 312625 [details] Align the structs Can we use alignas instead?
mitz
Comment 5 2017-06-11 16:30:25 PDT
(In reply to Sam Weinig from comment #4) > Comment on attachment 312625 [details] > Align the structs > > Can we use alignas instead? How?
Sam Weinig
Comment 6 2017-06-11 18:23:15 PDT
I played around and couldn't figure out a way to use it that wasn't more verbose than this.
WebKit Commit Bot
Comment 7 2017-06-11 18:57:34 PDT
Comment on attachment 312625 [details] Align the structs Clearing flags on attachment: 312625 Committed r218081: <http://trac.webkit.org/changeset/218081>
WebKit Commit Bot
Comment 8 2017-06-11 18:57:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.