[Mac] Unaligned pointers in static CMBufferCallbacks structs defined in WebCoreDecompressionSession.mm https://bugs.webkit.org/show_bug.cgi?id=173245

Reviewed by Sam Weinig.

* platform/graphics/cocoa/WebCoreDecompressionSession.mm:
(WebCore::WebCoreDecompressionSession::enqueueSample): Prepend 4 bytes of padding to the
  structs so that the pointers are properly aligned.


Canonical link: https://commits.webkit.org/190093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218081 268f45cc-cd09-0410-ab3c-d52691b4dbfc